tests/reference/asr-generics_array_02-22c8dc1.stderr
warning: The module 'numpy' located in $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py cannot be loaded
 --> tests/../integration_tests/generics_array_02.py:2:1
  |
2 | from numpy import empty, int32, float32
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ imported here

semantic error: Decorator: vertorize is not supported
   --> $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py:421:2
    |
421 | @vertorize
    |  ^^^^^^^^^ 
